# JenkinsTest

./: CMakeLists.txt  CMakeLists2.txt
Jenkinsfiles/: Jenkinsfile
